# DaisyScraper

./: .gitignore  Cargo.toml  LICENSE  README.md
settings/: gui.json  gui.json.documentation.md
src/: gui.rs  main.rs  scrap.rs  states.rs
src/config/: additional.rs  default.rs
state/: README.md  state.json
