[package]
name = "DaisyScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1.16.1", features = ["full"] }
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
scraper = "0.12.0"
clap = { version = "3.0.14", features = ["derive"] }
regex = "1.5.4"